--- a/PAGES/8a_allocations/index.html
+++ b/PAGES/8a_allocations/index.html
@@ -2006,7 +2006,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Interpreting Memory Allocation</h2></p>
-<p>Recall that memory allocations can occur on either the <span style="color: rgb(62, 121, 180);"><strong> heap</strong></span> or the <span style="color: rgb(62, 121, 180);"><strong> stack</strong></span>. Julia refers to memory allocations as heap allocations exclusively given that they&#39;re slow down computations. In the following will mention several objects that avoid the use of the heap for their storage. </p>
+<p>Recall that memory allocations can occur on either the <span style="color: rgb(62, 121, 180);"><strong> heap</strong></span> or the <span style="color: rgb(62, 121, 180);"><strong> stack</strong></span>. Julia refers to memory allocations as heap allocations exclusively, given that they slow down computations. In the following, we&#39;ll  mention several objects that allocate, and which avoid the heap for their storage.</p>
 <p>      </div>
     </div>
   </div>
