--- a/PAGES/8a_allocations/index.html
+++ b/PAGES/8a_allocations/index.html
@@ -2006,7 +2006,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Interpreting Memory Allocation</h2></p>
-<p>Recall that memory allocations can occur on either the <span style="color: rgb(62, 121, 180);"><strong> heap</strong></span> or the <span style="color: rgb(62, 121, 180);"><strong> stack</strong></span>. Julia refers to memory allocations as heap allocations exclusively, given that they slow down computations. In the following, we&#39;ll  mention several objects that allocate, and which avoid the heap for their storage.</p>
+<p>Recall that memory allocations can occur on either the heap or the stack. <strong> Julia refers to memory allocations as those on the heap exclusively</strong>. They&#39;re the ones to pay attention to, as they slow down computations. In the following, we&#39;ll start mentioning several objects that avoid the heap for their storage. Afterwards, we&#39;ll present the objects that allocate.</p>
 <p>      </div>
     </div>
   </div>
@@ -2016,7 +2016,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers, Tuples, Named Tuples, and Ranges Don't Allocate</h2></p>
-<p>Some objects that don&#39;t allocate memory include:</p>
+<p>Objects that don&#39;t allocate memory include:</p>
 <ul>
 <li><p>numbers</p>
 </li>
@@ -2027,7 +2027,7 @@ color: white;
 <li><p>ranges </p>
 </li>
 </ul>
-<p>A consequence of this is that creating, accessing, and operating on these objects don&#39;t allocate memory either. This is demonstrated below.</p>
+<p>This property determines that creating, accessing, and operating on these objects don&#39;t allocate either, as demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2092,7 +2092,7 @@ end
 
 @btime foo&#40;&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">  12.913 ns (1 allocation: 80 bytes)
 </code></pre> </div></div> </div>   </details></div>
-<p>Finally, another common operation that allocates memory is slicing, as it creates a copy by default. The only exception to this rule is when we access a single element, in which case no memory allocation occurs. </p>
+<p>Another common operation that allocates memory is slicing, as it creates a copy of an array by default. The only case where no memory allocation occurs is when we access a single element of an array.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2125,7 +2125,7 @@ foo&#40;x&#41; &#61; x&#91;1&#93; * x&#91;2&#93; &#43; x&#91;3&#93;
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Array creation not only occurs when we compute expressions such as <code>&#91;1,2,3&#93;</code>. It also arises with array comprehensions and broadcasting operations. In the latter case, the operation even allocates memory when the output vector is only stored temporarily, as we show below in the &quot;Broadcasting 2&quot; tab.</p>
+<p>Array creation also takes place with array comprehensions and broadcasting operations. In the case of broadcasting, this occurs even when the output vector is temporary, as demonstrated in the tab &quot;Broadcasting 2&quot;.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
