--- a/PAGES/8a0_memory_allocations/index.html
+++ b/PAGES/8a0_memory_allocations/index.html
@@ -2013,18 +2013,18 @@ color: white;
     </div>
   </div>
 </section>
-<section id="heaps_vs_stack" class="scrollspy section-bg-color">
+<section id="heap_vs_stack" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Heaps vs Stack</h2></p>
+        <h2>Heap vs Stack</h2></p>
 <p>When we write code in Julia, objects and variables are allocated in the RAM &#40;Random Access Memory&#41;. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> There&#39;s another part of the memory know as cache, which we won&#39;t cover. The <span style="color: rgb(62, 121, 180);"><strong> cache</strong></span> is a small fast memory that sits between the CPU and the RAM. It&#39;s typically much faster than the RAM, but its size is significantly smaller. It&#39;s primarily used to store only the most frequently used data and programming instructions.  </span></span></p>
 <p>The data is stored either on the stack or the heap, which aren&#39;t physical regions of memory but rather approaches to managing memory allocation and deallocation. Our goal will be avoiding memory allocations on the heap, as they&#39;re the ones that can significantly impact performance.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content>     Throughout this website, <strong> we'll refer to memory allocations as heap allocations exclusively</strong>. This is a common approach adopted in programming, including Julia, as allocation on the heap are the ones slowing down computations.  </div>  </div>
  <h4> Stack Allocations </h4>
-<p><span style="color: rgb(62, 121, 180);"><strong> Stack allocations</strong></span> are known for their speed, due to their simple memory management operations. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The stack is a Last-In-First-Out &#40;LIFO&#41; data structure, meaning that they&#39;re allocated and deallocated in a sequential order. This makes the handle of the memory relatively easy in comparison, without the need of the so-called garbage collector for handling the process.  </span></span>  They typically hold basic data types such as integers, floats, characters, or small fixed-size data structures like tuples. These objects have a known size, which distinguishes them from dynamic objects that can grow or shrink in size. </p>
+<p><span style="color: rgb(62, 121, 180);"><strong> Stack allocations</strong></span> are known for their speed because of their simple memory management operations. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The stack is a Last-In-First-Out &#40;LIFO&#41; data structure, meaning that they&#39;re allocated and deallocated in a sequential order. This makes the handle of the memory relatively easy in comparison, without the need of the so-called garbage collector for handling the process.  </span></span>  They typically hold basic data types such as integers, floats, characters, or small fixed-size data structures like tuples. These objects have a known size, which distinguishes them from dynamic objects that can grow or shrink in size. </p>
 <p>The main limitation of the stack is its limited size, making it suitable only for objects containing a few elements. Indeed, attempting to allocate more memory than the stack can accommodate will result in a &quot;stack overflow&quot; error, causing a program to crash.</p>
  <h4> Heap Allocations </h4>
 <p>The <span style="color: rgb(62, 121, 180);"><strong> heap</strong></span> can accommodate data structures too large to fit on the stack and exhibiting a variable size. Typical variables stored on the heap are arrays and strings.</p>
@@ -2535,7 +2535,7 @@ for multiple pics in a row
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="#heaps_vs_stack" data-offset="-40">Heaps vs Stack</a>
+        <a class="nav-link" href="#heap_vs_stack" data-offset="-40">Heap vs Stack</a>
       </li>
       
     </ul>
