--- a/PAGES/8a_allocations/index.html
+++ b/PAGES/8a_allocations/index.html
@@ -2006,7 +2006,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Interpreting Memory Allocation</h2></p>
-<p>Recall that memory allocations can occur on either the heap or the stack. <strong> Julia refers to memory allocations as those on the heap exclusively</strong>. They&#39;re the ones to pay attention to, as they slow down computations. In the following, we&#39;ll start mentioning several objects that avoid the heap for their storage. Afterwards, we&#39;ll present the objects that allocate.</p>
+<p>Recall that memory allocations can occur on either the heap or the stack, with <strong>Julia exclusively referring to memory allocations as those on the heap</strong>. These are the ones to watch out for, as they can significantly slow down computations. In the following, we present several objects avoiding the heap for their storage. Afterwards, we&#39;ll introduce objects that do allocate on the heap.</p>
 <p>      </div>
     </div>
   </div>
@@ -2027,7 +2027,7 @@ color: white;
 <li><p>ranges </p>
 </li>
 </ul>
-<p>This property determines that creating, accessing, and operating on these objects don&#39;t allocate either, as demonstrated below.</p>
+<p>This property determines that creating, accessing, and operating on these objects don&#39;t allocate either. This is demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2086,7 +2086,7 @@ end
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Arrays and Slices Do Allocate Memory</h2></p>
-<p>Array creation allocates memory, regardless of whether the result is stored or not. For instance, executing the following function allocates memory.</p>
+<p>Array creation allocates memory, even if the result is not stored. For instance, executing the following function allocates memory.</p>
  <div class=" code_box"> <details  open><summary> Vector Creation  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">foo&#40;&#41;  &#61; &#91;1,2,3&#93;
 
 
@@ -2125,7 +2125,7 @@ foo&#40;x&#41; &#61; x&#91;1&#93; * x&#91;2&#93; &#43; x&#91;3&#93;
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Array creation also takes place with array comprehensions and broadcasting operations. In the case of broadcasting, this occurs even when the output vector is temporary, as demonstrated in the tab &quot;Broadcasting 2&quot;.</p>
+<p>Array creation occurs not only through slicing, but also with array comprehensions and broadcasting operations. In the case of broadcasting, this takes place even when the output vector is temporary, as demonstrated in the tab &quot;Broadcasting 2&quot;.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
